--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "morgan": "^1.10.0",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "supertest": "^6.0.1"
   }
 }
